[tool.poetry]
name = "apielectionissues"
version = "0.1.0"
description = ""
authors = ["Jackson Severino da Rocha <jackson.severino.rocha@escola.pr.gov.br>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
